# SubversionR

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_support_request.yml
.github/workflows/: attest-release-vsix.yml  bootstrap-marketplace-identity.yml  ci.yml  pr-fast.yml  publish-marketplace.yml
crates/subversionr-daemon/: Cargo.toml
crates/subversionr-daemon/src/: bridge.rs  lib.rs  main.rs  native.rs  remote.rs  remote_checkout_journal.rs  remote_operation.rs  remote_worker.rs  remote_worker_windows.rs  state.rs  stdio.rs
crates/subversionr-daemon/tests/: m8_credential_worker_probe.rs  m8_trust_ordering_probe.rs  m8_worker_containment_probe.rs  m8_worker_supervisor.rs  native_bridge.rs  remote_checkout_journal.rs  rpc_dispatch.rs  stdio_rpc.rs
crates/subversionr-daemon/tests/fixtures/: m8_extension_host_launcher.cjs
crates/subversionr-protocol/: Cargo.toml
docs/adr/: ADR-001-typescript-rust-libsvn-architecture.md  ADR-002-stdio-rpc-transport.md  ADR-003-bundled-libsvn-runtime.md  ADR-004-working-copy-database-integrity.md  ADR-005-dirty-path-status-refresh.md  ADR-006-local-and-remote-status-scheduling.md  ADR-007-sidecar-process-lifetime.md  ADR-008-stable-vscode-apis.md  ADR-009-optional-tortoisesvn-adapter.md  ADR-010-credential-storage.md  ADR-011-cache-source-of-truth.md  ADR-012-svn-terminology.md  ADR-013-disposable-remote-operation-workers.md  README.md
docs/ci/: cloudflare-pr-fast-bridge.md  github-actions-restoration.md
docs/onboarding/: ENGINEERING_HANDOFF.md
docs/plans/: m1-private-repo-and-protocol-smoke.md  m2-repository-status-snapshot.md  m3-dirty-path-status-engine.md  m4-core-scm-operations.md  m5-content-diff-history.md  m6-auth-security-trust.md  m7-release-publication.md
docs/release/: 0.2.2-publication-evidence.md  0.2.3-publication-evidence.md  0.2.4-publication-evidence.md  0.2.5-publication-evidence.md  delete-unversioned-trash-policy.md  github-attestation-bundle.win32-x64.json  github-attestation-candidate-contract.win32-x64.json  github-attestation-contract.win32-x64.json  github-attestation-evidence.win32-x64.json  github-attestation-verification.win32-x64.json  m7-release-readiness-gates.md  m8-i6-svn-anonymous-evidence-contract.md  m8-i6-svn-anonymous-evidence.v1.schema.json  marketplace-existing-listing-evidence.json  marketplace-identity-bootstrap-evidence.json  marketplace-pre-release-owner-exception-0.2.1.md  marketplace-pre-release-owner-exception-0.2.2.md  marketplace-pre-release-owner-exception-0.2.3.md  marketplace-pre-release-owner-exception-0.2.4.md  marketplace-pre-release-owner-exception-0.2.5.md  marketplace-pre-release-owner-exception.md  marketplace-publisher-authorization-evidence.json  native-artifact-map.win32-x64.json  post-release-asset-verification-predicate.v1.schema.json  public-claim-matrix.md  public-cutover-evidence.json  public-cutover-runbook.md  requirements-release-evidence.csv  security-evidence-matrix.md
docs/research/: descendant-wc-activation-probes.md  m8-external-ecosystem-survey.md  m8-native-capability-audit.md  m8-remote-access-survey.md  m8-remote-feasibility-probes.md
docs/roadmap/: README.md  m8-unified-remote-access-design.md
docs/security/: m6-to-m7-security-decision.md  malicious-input-corpus.win32-x64.json  native-advisory-sources.lock.json  native-manual-advisory-review.win32-x64.json  native-remote-fuzz-contract.win32-x64.json  support-handling.md  support-redaction-checklist.md  threat-model.md  vulnerability-decisions.win32-x64.json
fuzz/: Cargo.toml
fuzz/corpus/svn_server_response_history_log/: malicious-log-response.seed  manifest.json
fuzz/fuzz_targets/: svn_server_response_history_log.rs
native/: release-build-epoch.txt  sources.lock.json
native/feasibility/m8-remote-settlement/: CMakeLists.txt  README.md  http-fixture.ps1  openssl-fixture.cnf  probe.c
native/svn-bridge/: CMakeLists.txt
native/svn-bridge/include/: subversionr_bridge.h
native/svn-bridge/src/: subversionr_bridge.c
native/svn-bridge/tests/: credential_provider_probe.c
scripts/: verify-localization.ps1  verify-public-security-docs.ps1  verify-support-intake.ps1
scripts/ci/: cloudflare-pr-fast-bridge.mjs  cloudflare-pr-fast-worker.mjs  cloudflare-pr-fast.wrangler.jsonc
scripts/native/: SubversionR.Native.psm1  build-bridge.ps1  build-daemon.ps1  build-dependencies.ps1  build-httpd.ps1  build-subversion-dav-modules.ps1  build-subversion.ps1  smoke-bridge.ps1  smoke-httpd-dav-https.ps1  smoke-m8-remote-settlement-fixtures.ps1  smoke-m8-remote-settlement.ps1  smoke-malicious-dav-xml.ps1  smoke-malicious-svn-server-response.ps1  verify-sources.ps1
scripts/release/: capture-vscode-renderer-ui.mjs  generate-beta-artifact-bundle-manifest.ps1  generate-live-osv-vulnerability-review.ps1  generate-malicious-input-corpus.ps1  generate-native-advisory-review.ps1  generate-native-advisory-triage-input.ps1  generate-native-artifact-map-preflight.ps1  generate-publication-gaps.ps1  (+81 more)
scripts/tests/fixtures/packaged-native-probe/: Cargo.toml  build.rs
scripts/tests/fixtures/packaged-native-probe/src/: lib.rs
(+77 files in other folders)
