[workspace]

[package]
name = "subversionr-native-remote-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"

[[bin]]
name = "svn_server_response_history_log"
path = "fuzz_targets/svn_server_response_history_log.rs"
test = false
doc = false
bench = false
