[package]
name = "packaged-native-probe-fixture"
version = "0.0.0"
edition = "2024"
publish = false
build = "build.rs"

[workspace]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "current-protocol-daemon"
path = "src/bin/current_protocol_daemon.rs"

[[bin]]
name = "stale-protocol-daemon"
path = "src/bin/stale_protocol_daemon.rs"

[[bin]]
name = "mismatched-backend-version-daemon"
path = "src/bin/mismatched_backend_version_daemon.rs"

[[bin]]
name = "mismatched-bridge-version-daemon"
path = "src/bin/mismatched_bridge_version_daemon.rs"

[dependencies]
serde_json = "1"
